[package]
name = "learn"
version = "0.1.1"
edition = "2024"
homepage = "https://github.com/yingkitw/learn"
repository = "https://github.com/yingkitw/learn"
documentation = "https://docs.rs/learn"
license = "Apache-2.0"
description = "A minimal reinforcement learning library written in Rust from scratch."
categories = ["science", "algorithms"]
keywords = ["reinforcement", "rl", "machine-learning"]

[dependencies]
rand = "0.9"
